--- a/styles/main.less
+++ b/styles/main.less
@@ -16,10 +16,98 @@ body {
     max-width: 1200px;
 }
 
+.page-nav {
+    background: @primary-color;
+
+    ul {
+        padding: 0 7px;
+        margin: 0 auto;
+        list-style: none;
+        width: 1200px;
+
+        li {
+            float: left;
+            position: relative;
+            border-left: 1px solid transparent;
+            border-right: 1px solid transparent;
+
+            &:hover {
+                border-left-color: @primary-color - 20;
+                border-right-color: @primary-color - 20;
+            }
+
+            a {
+                color: #fff;
+                display: block;
+                padding: 8px 8px;
+                font-size: 14px;
+                text-decoration: none;
+            }
+
+            .sub-menu {
+                position: absolute;
+                z-index: 100;
+                left: 0;
+                top: 100%;
+                background: @primary-color - 10;
+                border-top: 1px solid @primary-color - 20;
+                width: auto;
+                padding: 0;
+                margin: 0;
+                list-style: none;
+                border-bottom-left-radius: 2px;
+                border-bottom-right-radius: 2px;
+                overflow: hidden;
+                display: none;
+
+                li {
+                    float: none;
+                    border-top: 1px solid transparent;
+                    border-bottom: 1px solid transparent;
+
+                    &:hover {
+                        border-top-color: @primary-color - 20;
+                        border-bottom-color: @primary-color - 20;
+                    }
+
+                    a {
+                        display: block;
+                        white-space: nowrap;
+                        padding: 6px 8px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.page-header {
+    background: #eee;
+    margin: 0;
+    padding: 15px 0;
+    border-bottom: 1px solid #eee - 10;
+
+    .wrapper {
+        width: 1200px;
+        margin: 0 auto;
+    }
+
+    a {
+        font-size: 22px;
+        padding-left: 15px;
+        padding-right: 15px;
+        text-decoration: none;
+    }
+}
+
 .page-main {
-    padding-top: 80px;
     background: #fff;
     min-height: 93vh;
+    padding-top: 30px;
+
+    @media (max-width: 1200px) {
+        padding-top: 70px;
+    }
 
     a {
         color: #333;
@@ -30,8 +118,22 @@ body {
         }
     }
 
-    @media (max-width: 1200px) {
-        padding-top: 70px;
+    .wrapper {
+        width: 1200px;
+        margin: 0 auto;
+
+        .main-content {
+            float: left;
+            width: 785px;
+            margin-right: 30px;
+            padding-left: 15px;
+        }
+
+        .main-sidebar {
+            float: left;
+            width: 385px;
+            padding-right: 15px;
+        }
     }
 
 	.main.section {
