--- a/styles/main.less
+++ b/styles/main.less
@@ -1,5 +1,9 @@
 @primary-color: #fa7603;
 
+html {
+    width: 100%;
+}
+
 body {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
@@ -8,6 +12,7 @@ body {
     line-height: 1.5em;
     font-weight: normal;
     background: #2a2730;
+    width: 100%;
 }
 
 .container {
