--- a/styles/main.less
+++ b/styles/main.less
@@ -28,17 +28,15 @@ body {
         padding: 0 7px;
         margin: 0 auto;
         list-style: none;
-        width: 1200px;
+        max-width: 1200px;
 
         li {
             float: left;
             position: relative;
-            border-left: 1px solid transparent;
-            border-right: 1px solid transparent;
+            border: 1px solid transparent;
 
             &:hover {
-                border-left-color: @primary-color - 20;
-                border-right-color: @primary-color - 20;
+                border-color: @primary-color - 20;
             }
 
             a {
@@ -55,7 +53,7 @@ body {
                 left: 0;
                 top: 100%;
                 background: @primary-color - 10;
-                border-top: 1px solid @primary-color - 20;
+                border: 1px solid @primary-color - 20;
                 width: auto;
                 padding: 0;
                 margin: 0;
@@ -67,12 +65,10 @@ body {
 
                 li {
                     float: none;
-                    border-top: 1px solid transparent;
-                    border-bottom: 1px solid transparent;
+                    border: 1px solid transparent;
 
                     &:hover {
-                        border-top-color: @primary-color - 20;
-                        border-bottom-color: @primary-color - 20;
+                        border-color: @primary-color - 20;
                     }
 
                     a {
@@ -90,10 +86,9 @@ body {
     background: #eee;
     margin: 0;
     padding: 15px 0;
-    border-bottom: 1px solid #eee - 10;
 
     .wrapper {
-        width: 1200px;
+        max-width: 1200px;
         margin: 0 auto;
     }
 
@@ -102,6 +97,7 @@ body {
         padding-left: 15px;
         padding-right: 15px;
         text-decoration: none;
+        color: @primary-color;
     }
 }
 
@@ -110,34 +106,12 @@ body {
     min-height: 93vh;
     padding-top: 30px;
 
-    @media (max-width: 1200px) {
-        padding-top: 70px;
-    }
-
     a {
         color: #333;
         text-decoration: none;
 
         &:hover {
             color: @primary-color;
-        }
-    }
-
-    .wrapper {
-        width: 1200px;
-        margin: 0 auto;
-
-        .main-content {
-            float: left;
-            width: 785px;
-            margin-right: 30px;
-            padding-left: 15px;
-        }
-
-        .main-sidebar {
-            float: left;
-            width: 385px;
-            padding-right: 15px;
         }
     }
 
